# icebreaker-v2-usb-firmware

./: .clang-format  .gitattributes  .gitmodules  README.md  meson.build  meson_options.txt  riscv-sifive  riscv-xpack
.github/workflows/: build-riscv.yml
lib/: meson.build
lib/CherryUSB/: meson.build
src/: cdc_acm_template.c  cdc_acm_template.h  cdc_acm_to_uart.c  cdc_acm_to_uart.h  ch32v30x_conf.h  ch32v30x_it.c  ch32v30x_it.h  flash.c  flash.h  main.c  meson.build  system_ch32v30x.c  system_ch32v30x.h  time.c  time.h
src/platform/: hw_1.99a.c  hw_1.99a.h  platform.h  platform_1_99a.c
src/tusb/: msc_disk.c  tusb_config.h  usb_descriptors.c
src/tusb/portable/wch/ch32v307/: usb_dc_usbhs.c
